indg: Fix wrapping fix new issue

--- a/src/App.css
+++ b/src/App.css
@@ -82,7 +82,6 @@ a:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
-  flex-wrap: wrap;
   padding: 20px;
   margin: 32px;
   height: calc(100vh - 104px);
